DHT22 plugged and beebottle dashboard created
Dashboard privately available at:
https://beebotte.com/dash/ace53eb0-11d5-11e6-91fe-4bd453b20a39

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "test06_lcd_custom/Adafruit_Python_CharLCD"]
 	path = test06_lcd_custom/Adafruit_Python_CharLCD
 	url = https://github.com/adafruit/Adafruit_Python_CharLCD
+[submodule "test02_dht22/Adafruit_Python_DHT"]
+	path = test02_dht22/Adafruit_Python_DHT
+	url = git@github.com:adafruit/Adafruit_Python_DHT.git
